--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="utf-8">
     <title>Minion Master</title>
 
+    <script type="text/javascript" src="./animator.js"></script>
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./timer.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./util.js"></script>
+    <script type="text/javascript" src="./wolf.js"></script>
     <script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
