Getting the grass on the canvas
title

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="./homebase.js"></script>
     <script type="text/javascript" src="./wolf.js"></script>
     <script type="text/javascript" src="./main.js"></script>
+    <script type="text/javascript" src="./background.js"></script>
 </head>
 <body>
     <canvas id="gameWorld" width="1024" height="768" style="background: white; border: 1px solid black"></canvas>
