--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <head>
     <meta charset="utf-8">
     <title>Minion Master</title>
-    <script type="text/javascript" src="./animator.js"></script>
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./timer.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./util.js"></script>
     <script type="text/javascript" src="./minion.js"></script>
     <script type="text/javascript" src="./Map.js"></script>
+    <script type="text/javascript" src="./animator.js"></script>
+    <script type="text/javascript" src="./homebase.js"></script>
     <script type="text/javascript" src="./wolf.js"></script>
     <script type="text/javascript" src="./main.js"></script>
+    <script type="text/javascript" src="./background.js"></script>
 </head>
 <body>
     <canvas id="gameWorld" width="1024" height="768" style="background: white; border: 1px solid black"></canvas>
