--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="./wolf.js"></script>
     <script type="text/javascript" src="./main.js"></script>
     <script type="text/javascript" src="./background.js"></script>
+    <script type="text/javascript" src="./resources.js"></script>
 </head>
 <body>
     <canvas id="gameWorld" width="1024" height="768" style="background: white; border: 1px solid black"></canvas>
