--- a/index.html
+++ b/index.html
@@ -21,4 +21,7 @@
 <body>
     <canvas id="gameWorld" width="1024" height="768" style="background: white; border: 1px solid black"></canvas>
 </body>
+<div>
+    Click on a wolf or minion to select it. <br />
+</div>
 </html>
