--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <head>
     <meta charset="utf-8">
     <title>Minion Master</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <style>
+        body {
+          font-family: 'Playfair Display SC', serif;
+          font-family: 'Press Start 2P', cursive;
+          font-size: 24px;
+        }
+    </style>
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./timer.js"></script>
     <script type="text/javascript" src="./player.js"></script>
