--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./timer.js"></script>
     <script type="text/javascript" src="./player.js"></script>
+    <script type="text/javascript" src="./button.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./util.js"></script>
-    <script type="text/javascript" src="./Map.js"></script>
+    <script type="text/javascript" src="./map.js"></script>
     <script type="text/javascript" src="./animator.js"></script>
     <script type="text/javascript" src="./homebase.js"></script>
     <script type="text/javascript" src="./minion.js"></script>
@@ -26,7 +27,6 @@
     <script type="text/javascript" src="./main.js"></script>
     <script type="text/javascript" src="./background.js"></script>
     <script type="text/javascript" src="./resources.js"></script>
-
     <script type="text/javascript" src="./HUD.js"></script>
 </head>
 <body>
