--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./timer.js"></script>
     <script type="text/javascript" src="./player.js"></script>
-    <script type="text/javascript" src="./button.js"></script>
+    <script type="text/javascript" src="./wolf.js"></script>
+    <script type="text/javascript" src="./buildings.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./util.js"></script>
-    <script type="text/javascript" src="./map.js"></script>
     <script type="text/javascript" src="./animator.js"></script>
     <script type="text/javascript" src="./homebase.js"></script>
     <script type="text/javascript" src="./minion.js"></script>
     <script type="text/javascript" src="./main.js"></script>
     <script type="text/javascript" src="./background.js"></script>
     <script type="text/javascript" src="./resources.js"></script>
+
     <script type="text/javascript" src="./HUD.js"></script>
 </head>
 <body>
