--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         <a href="#info">Unit Info</a>
       </div>
   </div>
+  <div>
+      <br />
+      <input type="checkbox" id="debug" checked> Debug
+  </div>
 
 </body>
 
