implementation of buttons, player resources are still bugged temp is min

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script type="text/javascript" src="./button.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./util.js"></script>
-    <script type="text/javascript" src="./map.js"></script>
+    <!-- <script type="text/javascript" src="./map.js"></script> -->
     <script type="text/javascript" src="./animator.js"></script>
     <script type="text/javascript" src="./homebase.js"></script>
     <script type="text/javascript" src="./minion.js"></script>
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="./background.js"></script>
     <script type="text/javascript" src="./resources.js"></script>
     <script type="text/javascript" src="./HUD.js"></script>
+    <script type="text/javascript" src="./wolf.js"></script>
 </head>
 <body>
 
@@ -35,13 +36,13 @@
 
   <canvas id="gameWorld" width="1280" height="768" style="background: white; border: 1px solid black"></canvas>
 
-  <div class="menudrop">
+  <!-- <div class="menudrop">
     <button onclick="menuFunction()" class="dropbtn">Game Menu</button>
       <div id="myDropdown" class="dropdown-content">
         <a href="#debug" id="debug">Debug ON</a>
         <a href="#info">Unit Info</a>
       </div>
-  </div>
+  </div> -->
 
 </body>
 
