--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="./main.js"></script>
     <script type="text/javascript" src="./background.js"></script>
     <script type="text/javascript" src="./resources.js"></script>
+    <script type="text/javascript" src="./sceneManager.js"></script>
 
     <script type="text/javascript" src="./HUD.js"></script>
 </head>
@@ -34,7 +35,7 @@
 
   <link rel="stylesheet" type="text/css" href="dropdown.css" />
 
-  <canvas id="gameWorld" width="1280" height="768" style="background: white; border: 1px solid black"></canvas>
+  <canvas id="gameWorld" width="1280" height="768" style="background: #777; border: 1px solid black" tabindex="0" autofocus></canvas>
 
   <div class="menudrop">
     <button onclick="menuFunction()" class="dropbtn">Game Menu</button>
