--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="./timer.js"></script>
     <script type="text/javascript" src="./player.js"></script>
     <script type="text/javascript" src="./wolf.js"></script>
+    <script type="text/javascript" src="./ogre.js"></script>
     <script type="text/javascript" src="./buildings.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./util.js"></script>
