Fixed HUD bugs with Scrolling
WASD around the canvas to see everything!

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 
   <canvas id="gameWorld" width="1280" height="768" style="background: #777; border: 1px solid black" tabindex="0" autofocus></canvas>
 
-  <div class="menudrop">
+  <!-- <div class="menudrop">
     <button onclick="menuFunction()" class="dropbtn">Game Menu</button>
       <div id="myDropdown" class="dropdown-content">
         <a href="#debug" id="debug">Debug ON</a>
         <a href="#info">Unit Info</a>
       </div>
-  </div>
+  </div> -->
   <div>
       <br />
       <input type="checkbox" id="debug" checked> Debug
