updating current merge attempt

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     </style>
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./timer.js"></script>
-    <script type="text/javascript" src="./player.js"></script>
     <script type="text/javascript" src="./wolf.js"></script>
     <script type="text/javascript" src="./ogre.js"></script>
     <script type="text/javascript" src="./ballista.js"></script>
     <script type="text/javascript" src="./buildings.js"></script>
+    <script type="text/javascript" src="./button.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./util.js"></script>
     <!-- <script type="text/javascript" src="./map.js"></script> -->
@@ -29,9 +29,7 @@
     <script type="text/javascript" src="./main.js"></script>
     <script type="text/javascript" src="./background.js"></script>
     <script type="text/javascript" src="./resources.js"></script>
-
     <script type="text/javascript" src="./HUD.js"></script>
-    <script type="text/javascript" src="./wolf.js"></script>
 </head>
 <body>
 
