--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     <script type="text/javascript" src="./background.js"></script>
     <script type="text/javascript" src="./resources.js"></script>
     <script type="text/javascript" src="./sceneManager.js"></script>
-
     <script type="text/javascript" src="./HUD.js"></script>
 </head>
 <body>
@@ -46,7 +45,11 @@
   </div> -->
   <div>
       <br />
-      <input type="checkbox" id="debug" checked> Debug
+      <p>Use the WASD keys to shift UP, LEFT, DOWN, and RIGHT, respectively.
+         <br><br>The arrow keys also function this way
+       </p>
+       <br>
+      <input type="checkbox" id="debug" checked> Debug </input>
   </div>
 
 </body>
