Small additions to the play area.
title.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="./resources.js"></script>
     <script type="text/javascript" src="./sceneManager.js"></script>
     <script type="text/javascript" src="./HUD.js"></script>
+    <script type="text/javascript" src="./projectile.js"></script>
 </head>
 <body>
 
