--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="./sceneManager.js"></script>
     <script type="text/javascript" src="./HUD.js"></script>
     <script type="text/javascript" src="./projectile.js"></script>
+    <script type="text/javascript" src="./towerButton.js"></script>
 </head>
 <body>
 
