project re-factor + camera border checking polished.

--- a/index.html
+++ b/index.html
@@ -13,24 +13,28 @@
             font-size: 24px;
           }
       </style>
-      <script type="text/javascript" src="./assetmanager.js"></script>
-      <script type="text/javascript" src="./wolf.js"></script>
-      <script type="text/javascript" src="./ogre.js"></script>
-      <script type="text/javascript" src="./ballista.js"></script>
-      <script type="text/javascript" src="./buildings.js"></script>
-      <script type="text/javascript" src="./button.js"></script>
-      <script type="text/javascript" src="./player.js"></script>
-      <script type="text/javascript" src="./gameengine.js"></script>
-      <script type="text/javascript" src="./util.js"></script>
-      <!-- <script type="text/javascript" src="./map.js"></script> -->
-      <script type="text/javascript" src="./animator.js"></script>
-      <script type="text/javascript" src="./health.js"></script>
-      <script type="text/javascript" src="./minion.js"></script>
+      <script type="text/javascript" src="./backend/assetmanager.js"></script>
+      <script type="text/javascript" src="./backend/gameengine.js"></script>
+      <script type="text/javascript" src="./backend/level.js"></script>
+      <script type="text/javascript" src="./backend/player.js"></script>
+
+      <script type="text/javascript" src="./buildings/cave.js"></script>
+      <script type="text/javascript" src="./buildings/GuardTower.js"></script>
+      <script type="text/javascript" src="./buildings/homebase.js"></script>
+
+      <script type="text/javascript" src="./critters/minion.js"></script>
+      <script type="text/javascript" src="./critters/ogre.js"></script>
+      <script type="text/javascript" src="./critters/wolf.js"></script>
+
+      <script type="text/javascript" src="./UI/animator.js"></script>
+      <script type="text/javascript" src="./UI/button.js"></script>
+      <script type="text/javascript" src="./UI/healthbar.js"></script>
+      <script type="text/javascript" src="./UI/HUD.js"></script>
+
+
       <script type="text/javascript" src="./main.js"></script>
-      <script type="text/javascript" src="./background.js"></script>
-      <script type="text/javascript" src="./resources.js"></script>
       <script type="text/javascript" src="./sceneManager.js"></script>
-      <script type="text/javascript" src="./HUD.js"></script>
+      <script type="text/javascript" src="./util.js"></script>
   </head>
 <body>
 
