Enabled towers and tower placement
Title.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="./timer.js"></script>
     <script type="text/javascript" src="./player.js"></script>
     <script type="text/javascript" src="./wolf.js"></script>
-    <script type="text/javascript" src="./buildings.js"></script>
+    <script type="text/javascript" src="./tower.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./util.js"></script>
     <script type="text/javascript" src="./animator.js"></script>
@@ -28,6 +28,8 @@
     <script type="text/javascript" src="./resources.js"></script>
     <script type="text/javascript" src="./sceneManager.js"></script>
     <script type="text/javascript" src="./HUD.js"></script>
+    <script type="text/javascript" src="./UI.js"></script>
+    <script type="text/javascript" src="./MiniMap.js"></script>
     <script type="text/javascript" src="./projectile.js"></script>
     <script type="text/javascript" src="./towerButton.js"></script>
 </head>
