--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <script type="text/javascript" src="./wolf.js"></script>
     <script type="text/javascript" src="./ogre.js"></script>
     <script type="text/javascript" src="./health.js"></script>
-    <script type="text/javascript" src="./ballista.js"></script>
-    <script type="text/javascript" src="./buildings.js"></script>
+    <script type="text/javascript" src="./cave.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./util.js"></script>
     <script type="text/javascript" src="./animator.js"></script>
