moving my files into a "old" folder

--- a/index.html
+++ b/index.html
@@ -17,23 +17,25 @@
       <script type="text/javascript" src="./backend/gameengine.js"></script>
       <script type="text/javascript" src="./backend/level.js"></script>
       <script type="text/javascript" src="./backend/player.js"></script>
+      <script type="text/javascript" src="./backend/sceneManager.js"></script>
 
       <script type="text/javascript" src="./buildings/cave.js"></script>
-      <script type="text/javascript" src="./buildings/GuardTower.js"></script>
+      <script type="text/javascript" src="./buildings/tower.js"></script>
       <script type="text/javascript" src="./buildings/homebase.js"></script>
 
       <script type="text/javascript" src="./critters/minion.js"></script>
       <script type="text/javascript" src="./critters/ogre.js"></script>
+      <script type="text/javascript" src="./critters/projectile.js"></script>
       <script type="text/javascript" src="./critters/wolf.js"></script>
 
       <script type="text/javascript" src="./UI/animator.js"></script>
       <script type="text/javascript" src="./UI/button.js"></script>
       <script type="text/javascript" src="./UI/healthbar.js"></script>
+      <script type="text/javascript" src="./UI/UI.js"></script>
+      <script type="text/javascript" src="./UI/MiniMap.js"></script>
       <script type="text/javascript" src="./UI/HUD.js"></script>
 
-
       <script type="text/javascript" src="./main.js"></script>
-      <script type="text/javascript" src="./sceneManager.js"></script>
       <script type="text/javascript" src="./util.js"></script>
   </head>
 <body>
