--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
       <script type="text/javascript" src="./buildings/cave.js"></script>
       <script type="text/javascript" src="./buildings/tower.js"></script>
+      <script type="text/javascript" src="./buildings/towerButton.js"></script>
       <script type="text/javascript" src="./buildings/homebase.js"></script>
+      <script type="text/javascript" src="./buildings/resources.js"></script>
 
       <script type="text/javascript" src="./critters/minion.js"></script>
       <script type="text/javascript" src="./critters/ogre.js"></script>
@@ -39,9 +41,6 @@
       <script type="text/javascript" src="./util.js"></script>
   </head>
 <body>
-
-
-  <link rel="stylesheet" type="text/css" href="dropdown.css" />
 
   <canvas id="gameWorld" width="1280" height="768" style="background: #777; border: 1px solid black" tabindex="0" autofocus></canvas>
 
