--- a/index.html
+++ b/index.html
@@ -13,28 +13,35 @@
           font-size: 24px;
         }
     </style>
-    <script type="text/javascript" src="./assetmanager.js"></script>
-    <script type="text/javascript" src="./timer.js"></script>
-    <script type="text/javascript" src="./player.js"></script>
-    <script type="text/javascript" src="./wolf.js"></script>
-    <script type="text/javascript" src="./ogre.js"></script>
-    <script type="text/javascript" src="./health.js"></script>
-    <script type="text/javascript" src="./cave.js"></script>
-    <script type="text/javascript" src="./tower.js"></script>
-    <script type="text/javascript" src="./gameengine.js"></script>
-    <script type="text/javascript" src="./util.js"></script>
-    <script type="text/javascript" src="./animator.js"></script>
-    <script type="text/javascript" src="./homebase.js"></script>
-    <script type="text/javascript" src="./minion.js"></script>
+    <script type="text/javascript" src="./backend/assetmanager.js"></script>
+    <script type="text/javascript" src="./backend/gameengine.js"></script>
+    <script type="text/javascript" src="./backend/sceneManager.js"></script>
+
+    <script type="text/javascript" src="./buildings/cave.js"></script>
+    <script type="text/javascript" src="./buildings/tower.js"></script>
+    <script type="text/javascript" src="./buildings/towerButton.js"></script>
+    <script type="text/javascript" src="./buildings/homebase.js"></script>
+    <script type="text/javascript" src="./buildings/resources.js"></script>
+
+    <script type="text/javascript" src="./critters/minion.js"></script>
+    <script type="text/javascript" src="./critters/wolf.js"></script>
+    <script type="text/javascript" src="./critters/ogre.js"></script>
+
+    <script type="text/javascript" src="./frontend/animator.js"></script>
+    <script type="text/javascript" src="./frontend/health.js"></script>
+    <script type="text/javascript" src="./frontend/HUD.js"></script>
+    <script type="text/javascript" src="./frontend/MiniMap.js"></script>
+    <script type="text/javascript" src="./frontend/player.js"></script>
+    <script type="text/javascript" src="./frontend/UI.js"></script>
+
+    <script type="text/javascript" src="./misc/background.js"></script>
+    <script type="text/javascript" src="./misc/projectile.js"></script>
+    <script type="text/javascript" src="./misc/timer.js"></script>
+    <script type="text/javascript" src="./misc/util.js"></script>
+
     <script type="text/javascript" src="./main.js"></script>
-    <script type="text/javascript" src="./background.js"></script>
-    <script type="text/javascript" src="./resources.js"></script>
-    <script type="text/javascript" src="./sceneManager.js"></script>
-    <script type="text/javascript" src="./HUD.js"></script>
-    <script type="text/javascript" src="./UI.js"></script>
-    <script type="text/javascript" src="./MiniMap.js"></script>
-    <script type="text/javascript" src="./projectile.js"></script>
-    <script type="text/javascript" src="./towerButton.js"></script>
+
+
 </head>
 <body>
 
