even more file-refactoring,added homebase + renaming game-->theGame

--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
     <script type="text/javascript" src="./critters/wolf.js"></script>
     <script type="text/javascript" src="./critters/ogre.js"></script>
 
-    <script type="text/javascript" src="./frontend/animator.js"></script>
-    <script type="text/javascript" src="./frontend/health.js"></script>
-    <script type="text/javascript" src="./frontend/HUD.js"></script>
-    <script type="text/javascript" src="./frontend/MiniMap.js"></script>
-    <script type="text/javascript" src="./frontend/player.js"></script>
-    <script type="text/javascript" src="./frontend/UI.js"></script>
+    <script type="text/javascript" src="./UI/animator.js"></script>
+    <script type="text/javascript" src="./UI/healthbar.js"></script>
+    <script type="text/javascript" src="./UI/hud.js"></script>
+    <script type="text/javascript" src="./UI/MiniMap.js"></script>
+    <script type="text/javascript" src="./UI/player.js"></script>
 
     <script type="text/javascript" src="./misc/background.js"></script>
     <script type="text/javascript" src="./misc/projectile.js"></script>
