--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="./critters/minion.js"></script>
     <script type="text/javascript" src="./critters/wolf.js"></script>
     <script type="text/javascript" src="./critters/ogre.js"></script>
+    <script type="text/javascript" src="./critters/dragon.js"></script>
 
     <script type="text/javascript" src="./frontend/animator.js"></script>
     <script type="text/javascript" src="./frontend/health.js"></script>
