Fireball and others
Fireball has yet to be worked out.
- Changed radius values for all buildings for consistent combat interaction animations.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
     <script type="text/javascript" src="./misc/background.js"></script>
     <script type="text/javascript" src="./misc/projectile.js"></script>
+    <script type="text/javascript" src="./misc/fireball.js"></script>
     <script type="text/javascript" src="./misc/timer.js"></script>
     <script type="text/javascript" src="./misc/util.js"></script>
 
