--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script type="text/javascript" src="./critters/ogre.js"></script>
 
     <script type="text/javascript" src="./UI/animator.js"></script>
+    <script type="text/javascript" src="./UI/button.js"></script>
     <script type="text/javascript" src="./UI/healthbar.js"></script>
     <script type="text/javascript" src="./UI/hud.js"></script>
     <script type="text/javascript" src="./UI/MiniMap.js"></script>
