--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="./buildings/homebase.js"></script>
     <script type="text/javascript" src="./buildings/resources.js"></script>
     <script type="text/javascript" src="./buildings/rock.js"></script>
+    <script type="text/javascript" src="./buildings/wolfpatch.js"></script>
 
     <script type="text/javascript" src="./critters/minion.js"></script>
     <script type="text/javascript" src="./critters/wolf.js"></script>
@@ -46,19 +47,8 @@
 
 </head>
 <body>
-
-
-  <link rel="stylesheet" type="text/css" href="dropdown.css" />
-
   <canvas id="gameWorld" width="1280" height="768" style="background: #777; border: 1px solid black" tabindex="0" autofocus></canvas>
 
-  <!-- <div class="menudrop">
-    <button onclick="menuFunction()" class="dropbtn">Game Menu</button>
-      <div id="myDropdown" class="dropdown-content">
-        <a href="#debug" id="debug">Debug ON</a>
-        <a href="#info">Unit Info</a>
-      </div>
-  </div> -->
   <div>
       <br />
       <p>Use the WASD keys to shift UP, LEFT, DOWN, and RIGHT, respectively.
