Small QoL changes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <canvas id="gameWorld" width="1280" height="768" style="background: #777; border: 1px solid black" tabindex="0" autofocus></canvas>
 
   <div>
-    <input type="checkbox" id="debug" checked> Debug </input>
+    <input type="checkbox" id="debug"> Debug </input>
       <br />
       <p>Use the WASD keys to shift UP, LEFT, DOWN, and RIGHT, respectively.
          <br><br>The arrow keys also function this way
