additional insturctions for user.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body {
           font-family: 'Playfair Display SC', serif;
           font-family: 'Press Start 2P', cursive;
-          font-size: 24px;
+          font-size: 18px;
         }
     </style>
     <script type="text/javascript" src="./backend/assetmanager.js"></script>
@@ -56,7 +56,8 @@
     <input type="checkbox" id="debug"> Debug </input>
       <br />
       <p>Use the WASD keys to shift UP, LEFT, DOWN, and RIGHT, respectively.
-         <br><br>The arrow keys also function this way
+         <br><br>The arrow keys also function this way.
+         Use food to spawn minion's and rock to create tower's to defend against wolves, ogres and dragons.
        </p>
        <br>
   </div>
