--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script type="text/javascript" src="./UI/hud.js"></script>
     <script type="text/javascript" src="./UI/MiniMap.js"></script>
     <script type="text/javascript" src="./UI/player.js"></script>
+    <script type="text/javascript" src="./UI/upgradeButton.js"></script>
 
     <script type="text/javascript" src="./misc/background.js"></script>
     <script type="text/javascript" src="./misc/projectile.js"></script>
